@@ -30,3 +30,6 @@
 
 /* Defined if the user specifies --enable-preset-menu=FILE.  */
 #undef PRESET_MENU_STRING
+
+/* Defined if the user specified --enable-auto-linux-mem-opt.  */
+#undef AUTO_LINUX_MEM_OPT
